deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-django
  labels:
    app: eks-demo-django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-demo-django
  template:
    metadata:
      labels:
        app: eks-demo-django
    spec:
      containers:
      - name: django
        image: 050752612531.dkr.ecr.ap-south-1.amazonaws.com/eks-demo:latest
        ports:
        - containerPort: 8000
        # envFrom:
        # - configMapRef:
        #     name: django-config
        # - secretRef:
        #     name: django-secret
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-django
spec:
  type: ClusterIP
  selector:
    app: eks-demo-django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a4e2260c123fe4cbfa9094dcf87ee142-756269258.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eks-demo-django
            port:
              number: 80
